Add Base part of App initialization UseCases 07, 08.
